--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -397,12 +397,16 @@ There is no need to save manually.
 
 *Q*: How do I transfer my data to another Computer? +
 *A*: Install the app in the other computer and overwrite the empty data file it creates with the file that contains the data of your previous Address Book folder.
+*Q*: Is Weaver free? +
+*A*: Yes. +
+*Q*: How can I get the latest version of Weaver? +
+*A*: You can download the jar file from GitHub whenever a new version is released via this link: https://github.com/CS2103AUG2017-W13-B2/main/releases. +
+
 
 == Command Summary
 
 * *Add* `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/DATE_OF_BIRTH [t/TAG]...` +
 e.g. `add n/James Ho p/22224444 e/jamesho@example.com a/123, Clementi Rd, 1234665 b/13.10.1997 f/ t/friend t/colleague`
-* *Clear* : `clear`
 * *Delete* : `delete INDEX` +
 e.g. `delete 3`
 * *Delete Person's Tags* : `delete/t INDEX [t/TAG]...` +
@@ -417,12 +421,14 @@ e.g. `find/t friends family`
 e.g. `color c/red t/friend t/family`
 * *Change font size* : `fs [FONT SIZE]` or  `fs +/-` +
 e.g. `fs xs` `fs +` `fs -`
+* *Photo Index FilePath* : `photo [Index] [FilePath]` +
+e.g. `photo 1 nus.jpg`
 * *List* : `list`
-* *Help* : `help`
 * *Select* : `select INDEX` +
 e.g.`select 2`
+* *Clear* : `clear`
 * *History* : `history`
 * *Undo* : `undo`
 * *Redo* : `redo`
-* *Photo Index FilePath* : photo [Index] [FilePath] +
-e.g. `photo 1 nus.jpg`
+* *Help* : `help`
+
