--- a/README.adoc
+++ b/README.adoc
@@ -8,7 +8,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 https://travis-ci.org/CS2103AUG2017-W13-B2/main[image:https://travis-ci.org/CS2103AUG2017-W13-B2/main.svg?branch=master[Build Status]]
 https://ci.appveyor.com/project/RonakLakhotia/main/branch/master[image:https://ci.appveyor.com/api/projects/status/c9bls1ru0n4vtcqm/branch/master?svg=true[Build status]]
-https://coveralls.io/github.com/CS2103AUG2017-W13-B2/main[image:https://coveralls.io/repos/github/CS2103AUG2017-W14-B1/main/badge.svg[Coverage Status]]
+https://coveralls.io/repos/github/RonakLakhotia/addressbook-level4/badge.svg?branch=master(Coverage Status)!:https://coveralls.io/github/RonakLakhotia/addressbook-level4?branch=master
 https://www.codacy.com/app/justinpoh/main?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=CS2103AUG2017-W13-B2/main&amp;utm_campaign=Badge_Grade[image:https://api.codacy.com/project/badge/Grade/481207cc97bf4a0fa8ea2a0ff18f10fb[Codacy Badge]]
 
 ifdef::env-github[]
