--- a/docs/check.adoc
+++ b/docs/check.adoc
@@ -1,4 +1,37 @@
-= Weaver User HandBook
+
+= Weaver - User Guide
+
+== Product Overview                      	1
+== Introduction	1
+== About	2
+== Getting Started	2
+== Features	3
+=== Viewing help : `help`	3
+=== Adding a person: `add`	3
+=== Listing all persons : `list`	3
+=== Editing a person : `edit`	3
+=== Locating persons by name: `find`	4
+=== Locating persons by tag: `find/t`	4
+=== Searching a person : `search`	5
+=== Deleting a person : `delete`	5
+=== Deleting a person's tag : `delete/t`	6
+=== Selecting a person : `select`	6
+=== Remarking a person : `remark`	7
+=== Listing entered commands : `history`	7
+=== Undoing previous command : `undo`	7
+=== Redoing the previously undone command : `redo`	8
+=== Customize tags' color : `color`	9
+=== Change font size : `fs`	9
+=== Add Photo to contacts : `photo` +	10
+=== Clearing all entries : `clear`	10
+=== Exiting the program : `exit`	10
+=== Coming in V2.0	10
+=== Saving the data	11
+== FAQ	11
+== Command Summary	11
+
+
+= Weaver - User Guide
 :toc:
 :toc-title:
 :toc-placement: preamble
@@ -14,21 +47,38 @@ endif::[]
 
 By: `W13-B2`      Since: `Aug 2017`      Licence: `MIT`
 
-
 == Product Overview
 
 Weaver is a desktop application that has a GUI (Graphical User Interface) but most of the interactions happen using
 a Command Line Interface.Weaver is your personalised addressbook that will make your day to day life easier by letting
 you access the details over your friends and family members as and when you want them.
 
+
+== Introduction
+
+Weaver is a free application to organise contacts.
+
+These are some of the features at a glance:
+
+. You can use Weaver via login to add, remove or clear contacts.
+. You can also edit the details of your contacts, update their profile picture and even use the enhanced tag features to customize your contacts.
+. You can also perform undo or redo if you make any mistakes, and access the help feature for further guidance on the features.
+
+Weaver is available for the Linux, Unix, Windows 10, and Mac OS X Operating System.
+
+
+
 == About
 
-This User Guide gives you some basic guidlines that you need to follow to use Weaver.It gives you a brief introduction
-of what the product intends to do and how it will benefit you as a user.Since Weaver uses a Command line Interface
-you will find below the list of commands and how to execute them in order to use the application.
-So lets get Started! +
+This document shows you how to get started with Weaver.
 
-== Getting started
+It gives you a comprehensive overview of the main features, and shows you how to perform the operations with step-by-step instructions to use Weaver.
+
+This document have a FAQ section to address your concerns, and also a command cheatsheet for quick reference at the end of this document.
+
+You are assumed to be familiar with the Command-Line Interface (CLI) with minimal usage of the mouse in order to use Weaver efficiently.
+
+== GETTING STARTED
 
 .  Ensure you have Java version `1.8.0_60` or later installed in your Computer.
 +
@@ -409,13 +459,17 @@ There is no need to save manually.
 == FAQ
 
 *Q*: How do I transfer my data to another Computer? +
-*A*: Install the app in the other computer and overwrite the empty data file it creates with the file that contains the data of your previous Address Book folder.
+*A*: Install the app in the other computer and overwrite the empty data file it creates with the file that contains the data of your previous Address Book folder. +
+*Q*: Is Weaver free? +
+*A*: Yes. +
+*Q*: How can I get the latest version of Weaver? +
+*A*: You can download the jar file from GitHub whenever a new version is available from link: https://github.com/CS2103AUG2017-W13-B2/main/releases. +
+
 
 == Command Summary
 
 * *Add* `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/DATE_OF_BIRTH [t/TAG]...` +
 e.g. `add n/James Ho p/22224444 e/jamesho@example.com a/123, Clementi Rd, 1234665 b/13.10.1997 f/ t/friend t/colleague`
-* *Clear* : `clear`
 * *Delete* : `delete INDEX` +
 e.g. `delete 3`
 * *Delete Person's Tags* : `delete/t INDEX [t/TAG]...` +
@@ -430,12 +484,16 @@ e.g. `find/t friends family`
 e.g. `color c/red t/friend t/family`
 * *Change font size* : `fs [FONT SIZE]` or  `fs +/-` +
 e.g. `fs xs` `fs +` `fs -`
+* *Photo Index FilePath* : `photo [Index] [FilePath]` +
+e.g. `photo 1 nus.jpg`
 * *List* : `list`
-* *Help* : `help`
 * *Select* : `select INDEX` +
 e.g.`select 2`
+* *Clear* : `clear`
 * *History* : `history`
 * *Undo* : `undo`
 * *Redo* : `redo`
-* *Photo Index FilePath* : photo [Index] [FilePath] +
-e.g. `photo 1 nus.jpg`
+* *Help* : `help`
+
+
+
